@@ -2,14 +2,17 @@
 classification = sequence / assembly
 
 [parameters]
+;; Path to spec file.  For hybrid assemblies, use unitigger=bog
 $;SPEC_FILE$; = /dev/null
 
 [input]
+;; Should be a list of lists
 $;INPUT_FILE_LIST$; =
+;; Should be a list of input files that you want assembled into one
 $;INPUT_FILE$; = 
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = frg
+$;INPUT_EXTENSION$; = list
 
 [output]
 $;OUTPUT_TOKEN$; = default
@@ -32,7 +35,7 @@ $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
 $;ITERATORQSUB$; = qsub
 $;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
-$;ITERATORQSUB_XML$; = $;DOCS_DIR$;/celera-assembler-SGE.$;ITERATORQSUB$;.xml
+$;ITERATORQSUB_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATORQSUB$;.xml
 
 ;Distributed options
 $;GROUP_COUNT$; = 150
